ActionActuator resets position when Start-Frame is not set (add to local mode) #38986

Closed
opened 2014-03-06 08:00:00 +01:00 by Monster · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken:2.69.0 r60995 (and 2.68a)
Worked: unknown

Descriptio:n
When playing an action with [Add] and - [x] with untouched Start-Frame (0.00), the position will be reset to the world start position of the action ignoring [Add] and [L].

I attach 3 files:

  • go.blend - every thing is fine (by setting start frame 1.00 and 0.00 later)
  • noGo.blend - showing the symptom (by not setting the start frame)
  • MultiNoGo.blend - showing two objects playing the same action (start frame not set) -> another issue: playing altering the visibility of the objects (I guess it is the same cause)

Step-by-Step:
These are the steps to reproduce the symptom:

  • start with default scene, look through the camera, frame 1, cube is selected
  • add a LocRot keyframe
  • go to frame 11
  • move the cube <2>
  • rotate the cube <45>
  • add a LocRot keyframe
  • add an AlwaysSensor with True Pulse (to auto-trigger the ActionActuator)
  • add an ActionActuator with: CubeAction, Play + [Add] + - , end frame 11.00 (do not touch start frame)
  • connect the AlwaysSensor with the ActionActuator (which creates an AndController)
  • start the BGE

Observation:
The cube plays the Action once as expected (with motion + turn)
The cube resets to 0,0,0 but keeps the orientation and plays from there

QuickFix:

  • Setting the start-frame of the ActionActuator to 1.0 permanently fixes the problem for this particular actuator. It can even be set to 1.0. (With undo the issue returns)
**System Information** Operating system and graphics card **Blender Version** Broken:2.69.0 r60995 (and 2.68a) Worked: unknown **Descriptio:n** When playing an action with [Add] and - [x] with untouched Start-Frame (0.00), the position will be reset to the world start position of the action ignoring [Add] and [L]. I attach 3 files: - [go.blend](https://archive.blender.org/developer/F80077/go.blend) - every thing is fine (by setting start frame 1.00 and 0.00 later) - [noGo.blend](https://archive.blender.org/developer/F80078/noGo.blend) - showing the symptom (by not setting the start frame) - [MultiNoGo.blend](https://archive.blender.org/developer/F80079/MultiNoGo.blend) - showing two objects playing the same action (start frame not set) -> another issue: playing altering the visibility of the objects (I guess it is the same cause) **Step-by-Step:** These are the steps to reproduce the symptom: - start with default scene, look through the camera, frame 1, cube is selected - add a LocRot keyframe <i> - go to frame 11 - move the cube <g><z><2> - rotate the cube <r><45> - add a LocRot keyframe <i> - add an AlwaysSensor with True Pulse (to auto-trigger the ActionActuator) - add an ActionActuator with: CubeAction, Play + [Add] + - [x], end frame 11.00 (do not touch start frame) - connect the AlwaysSensor with the ActionActuator (which creates an AndController) - start the BGE <p> **Observation:** The cube plays the Action once as expected (with motion + turn) The cube resets to 0,0,0 but keeps the orientation and plays from there **QuickFix:** - Setting the start-frame of the ActionActuator to 1.0 permanently fixes the problem for this particular actuator. It can even be set to 1.0. (With undo the issue returns)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @monster

Added subscriber: @monster
Member

Added subscriber: @brita

Added subscriber: @brita
Member

The files:

  • go.blend - every thing is fine (by setting start frame 1.00 and 0.00 later)
  • noGo.blend - showing the symptom (by not setting the start frame)
  • MultiNoGo.blend - showing two objects playing the same action (start frame not set) -> another issue: playing altering the visibility of the objects (I guess it is the same cause)

(@monster referencing them inside a code block doesn't seem to work)

The files: - [go.blend](https://archive.blender.org/developer/F80077/go.blend) - every thing is fine (by setting start frame 1.00 and 0.00 later) - [noGo.blend](https://archive.blender.org/developer/F80078/noGo.blend) - showing the symptom (by not setting the start frame) - [MultiNoGo.blend](https://archive.blender.org/developer/F80079/MultiNoGo.blend) - showing two objects playing the same action (start frame not set) -> another issue: playing altering the visibility of the objects (I guess it is the same cause) (@monster referencing them inside a code block doesn't seem to work)
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez

Added subscriber: @panzergame

Added subscriber: @panzergame

i confirm the bug : the IPO controller is always the same (in case of start 0.0), and so keep the same object start position = (0, 0, 0).

i confirm the bug : the IPO controller is always the same (in case of start 0.0), and so keep the same object start position = (0, 0, 0).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 286f5ffa59

This issue was referenced by 286f5ffa595cbdf9bb73c223ece4234aab38bd87
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38986
No description provided.