BGE: Fix T38986: Start object position not initialized in IPO.

The start position must be initialized at the first call of KX_IpoSGController::Update when m_ipo_start_initialized is to false, not when also the frame time is not 0.