source/gameengine/Ketsji/KX_IPO_SGController.cpp
@@ -124,7 +124,7 @@ bool KX_IpoSGController::Update(double currentTime)
 		SG_Spatial *ob = (SG_Spatial *)m_pObject;
 
 		//initialization on the first frame of the IPO
-		if (!m_ipo_start_initialized && currentTime != 0.0f) {
+		if (!m_ipo_start_initialized) {
 			m_ipo_start_point = ob->GetLocalPosition();
 			m_ipo_start_orient = ob->GetLocalOrientation();
 			m_ipo_start_scale = ob->GetLocalScale();
